# OPENGL

./: .gitignore  CMakeLists.txt  OPENGL_PROJ.sln  README.md
Debug/: OPENGL_PROJ.ilk
OPENGL_PROJ/: Basic.shader  EBO.cpp  EBO.h  OPENGL_PROJ.vcxproj  OPENGL_PROJ.vcxproj.filters  VAO.cpp  VAO.h  VBO.cpp  VBO.h  default.frag  default.vert  errorCheck.h  main.cpp  shaderClass.cpp  shaderClass.h  stb_image.cpp  texture.cpp  texture.h
OPENGL_PROJ -camera/: EBO.h  VAO.h  VBO.cpp  camera.cpp  camera.h  errorCheck.h  main.cpp  shaderClass.cpp  texture.h
OPENGL_PROJ -camera/Debug/: vc141.idb
OPENGL_PROJ -camera/Debug/OPENGL_PROJ.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OPENGL_PROJ.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OPENGL_PROJ/Debug/: texture.obj.enc  vc141.idb
OPENGL_PROJ/Debug/OPENGL_PROJ.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OPENGL_PROJ.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
opengl -camera/: Basic.shader  EBO.cpp  OPENGL_PROJ.vcxproj  OPENGL_PROJ.vcxproj.filters  Timestep.h  camera.cpp  camera.h  main.cpp  shaderClass.h  stb_image.h  texture.cpp
src/: Basic.shader  EBO.cpp  EBO.h  VAO.cpp  VBO.h  camera.cpp  camera.h  default.frag  default.vert  errorCheck.h  main.cpp  shaderClass.cpp  shaderClass.h  stb_image.cpp
texture +lighting/: Basic.shader  camera.cpp  camera.h
